sample/msvc/error/c2086.cpp
// C2086.cpp
int main() {
  int a;
  int a;   // C2086 not an error in ANSI C
}
